<resources>
    <string name="app_name">Tuniparadis</string>
    <string name="failed">Creation echoués</string>
    <string name="password">Mot de passe</string>
    <string name="h_password">Tapez votre mot de passe</string>
    <string name="confirm_password">confirmez mot de passe</string>
    <string name="Email">Email</string>
    <string name="nom">nom</string>
    <string name="prenom">prenom</string>
    <string name="h_Email">Tapez votre e-mail</string>
    <string name="Date_de_Naissance">Date de naissance</string>
    <string name="btn_cree">créer le compte</string>
    <string name="sexeH">Homme</string>
    <string name="sexeF">Femme</string>
    <string name="connect">Se connecter</string>
    <string name="du">Du</string>
    <string name="numero">numero</string>
    <string name="ville">ville</string>
    <string name="au">Au</string>
    <string name="debut_date">Date de début</string>
    <string name="debut_fin">Date fin</string>
    <string name="create_account">Crée un compte</string>
    <string name="Chambre">Chambres</string>
    <string name="Adulte">Adultes</string>
    <string name="enfant">Enfants</string>
    <string name="prix">prix</string>
    <string name="InvalidPass">mot de passe non conforme</string>
    <string name="verif">Vérifier vos champs</string>
    <string name="n_hotel">La Cigale Tabarka Hotel Thalasso Spa  Golf</string>
    <string name="Tabarka">Tabarka</string>
    <string name="no_hotel">Hotel Le Royal Hammamet</string>
    <string name="Hammamet">Hammamet</string>
    <string name="nom_hotel">Hasdrubal Thalassa  Spa Djerba</string>
    <string name="Djerba">Djerba</string>
    <string name="nom_hote">Movenpick Hotel Du Lac Tunis</string>
    <string name="Tunis">Tunis</string>
    <string name="nomhotel">El Mouradi Gammarth</string>
    <string name="Gammarth">Gammarth</string>
    <string name="nomhotels">Four Seasons Hotel Tunis</string>
    <string-array name="Adultes">
        <item>Adultes</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="Chambres">
        <item>Chambres</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="Enfants">
        <item>Enfants</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


</resources>
