<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation">

    <TextView
        android:id="@+id/recuperer_nom_hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="44dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="@string/du"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recuperer_nom_hotel" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/debut_date"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/recuperer_nom_hotel" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"

        android:text="@string/au"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/recuperer_nom_hotel" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/debut_fin"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/recuperer_nom_hotel" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="@string/Chambre"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="127dp"
        android:layout_height="45dp"
        android:layout_marginTop="208dp"
        android:ems="10"
        android:hint="@string/Adulte"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editText9"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="142dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/enfant"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText10"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <Button
        android:id="@+id/reserverr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="Reserver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10" />

    <TextView
        android:id="@+id/prix"
        android:layout_width="139dp"
        android:layout_height="27dp"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/prix"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/reserverr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />


</androidx.constraintlayout.widget.ConstraintLayout>