<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/android_picture"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_weight="0.5"
        android:src="@drawable/logoo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nom" />

        <EditText
            android:id="@+id/Prénom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom" />

        <EditText
            android:id="@+id/user_emailform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="email"
            android:hint="@string/h_Email"
            android:inputType="textEmailAddress"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ville" />

        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero" />

        <EditText
            android:id="@+id/user_passwordform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/confirm_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password" />

        <CheckBox
            android:id="@+id/Homme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Homme" />

        <CheckBox
            android:id="@+id/Femme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Femme" />
        <Button
            android:id="@+id/btn_enregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="enregistrer"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>